hack/manifests/testing/ldap.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap-deployment
spec:
  selector:
    matchLabels:
      app: ldap-service
  template:
    metadata:
      labels:
        app: ldap-service
    spec:
      volumes:
        - name: ldif-volume
          configMap:
            name: ldif-config
      containers:
      - name: ldap-service
        image: osixia/openldap:1.5.0
        args:
          - "--copy-service"
          - "--loglevel"
          - "debug"
        volumeMounts:
          - name: ldif-volume
            mountPath: /ldif/
        ports:
          - containerPort: 389
            name: ldap-insecure
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ldap-service
  name: ldap
spec:
  selector:
    app: ldap-service
  ports:
    - protocol: TCP
      name: ldap-insecure
      port: 389
      targetPort: 389
